Compiler_F74055047_HW2/y.output
Terminals unused in grammar

   LSB
   RSB
   CPP_COMMENT
   C_COMMENT


State 30 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 99 conflicts: 6 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program program_body
    2        | %empty

    3 program_body: function_declaration
    4             | variable_declaration
    5             | function

    6 function: type ID LB parameter_list RB block_body

    7 stats: stats stat
    8      | %empty

    9 stat: while_statement
   10     | if_statement
   11     | variable_declaration
   12     | printf_statement
   13     | expression_statement
   14     | function_call
   15     | return_statement

   16 function_call: ID LB argument_list RB SEMICOLON

   17 argument_list: assignment_expression
   18              | argument_list COMMA assignment_expression
   19              | %empty

   20 expression_statement: assign_statement
   21                     | expression SEMICOLON
   22                     | SEMICOLON

   23 assign_statement: ID assignment_operator expression SEMICOLON

   24 return_statement: RETURN expression SEMICOLON

   25 printf_statement: PRINT LB QUOTA STR_CONST QUOTA RB SEMICOLON
   26                 | PRINT LB ID RB SEMICOLON

   27 variable_declaration: type ID ASGN assignment_expression SEMICOLON

   28 function_declaration: type ID LB parameter_list RB SEMICOLON

   29 variable_declaration: type ID SEMICOLON
   30                     | type ID ASGN expression SEMICOLON

   31 while_statement: WHILE LB expression RB block_body

   32 if_statement: IF LB expression RB block_body ELSE block_body
   33             | IF LB expression RB block_body ELSE if_statement
   34             | IF LB expression RB block_body

   35 block_body: LCB stats RCB

   36 expression: assignment_expression
   37           | %empty

   38 parameter_list: parameter
   39               | parameter_list COMMA parameter
   40               | %empty

   41 parameter: type ID

   42 type: VOID
   43     | INT
   44     | FLOAT
   45     | BOOL
   46     | STRING

   47 assignment_expression: unary_expression assignment_operator assignment_expression
   48                      | logical_or_expression

   49 logical_or_expression: logical_and_expression
   50                      | logical_or_expression OR logical_and_expression

   51 logical_and_expression: relational_expression
   52                       | logical_and_expression AND relational_expression

   53 relational_expression: additive_expression
   54                      | relational_expression relational_operator additive_expression

   55 additive_expression: multiplicative_expression
   56                    | additive_expression ADD multiplicative_expression
   57                    | additive_expression SUB multiplicative_expression

   58 multiplicative_expression: unary_expression
   59                          | multiplicative_expression MUL unary_expression
   60                          | multiplicative_expression DIV unary_expression
   61                          | multiplicative_expression MOD unary_expression

   62 relational_operator: MT
   63                    | LT
   64                    | MTE
   65                    | LTE
   66                    | EQ
   67                    | NE

   68 assignment_operator: ASGN
   69                    | MULASGN
   70                    | DIVASGN
   71                    | MODASGN
   72                    | ADDASGN
   73                    | SUBASGN

   74 unary_expression: postfix_expression
   75                 | INC unary_expression
   76                 | DEC unary_expression
   77                 | unary_operator unary_expression

   78 unary_operator: SUB
   79               | ADD
   80               | NOT

   81 postfix_expression: primary_expression
   82                   | postfix_expression INC
   83                   | postfix_expression DEC

   84 primary_expression: ID
   85                   | constant
   86                   | string
   87                   | LB expression RB

   88 string: QUOTA STR_CONST QUOTA

   89 constant: I_CONST
   90         | F_CONST
   91         | TRUE
   92         | FALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
PRINT (258) 25 26
IF (259) 32 33 34
ELSE (260) 32 33
WHILE (261) 31
ID (262) 6 16 23 26 27 28 29 30 41 84
SEMICOLON (263) 16 21 22 23 24 25 26 27 28 29 30
COMMA (264) 18 39
QUOTA (265) 25 88
ADD (266) 56 79
SUB (267) 57 78
MUL (268) 59
DIV (269) 60
MOD (270) 61
INC (271) 75 82
DEC (272) 76 83
MT (273) 62
LT (274) 63
MTE (275) 64
LTE (276) 65
EQ (277) 66
NE (278) 67
ASGN (279) 27 30 68
ADDASGN (280) 72
SUBASGN (281) 73
MULASGN (282) 69
DIVASGN (283) 70
MODASGN (284) 71
AND (285) 52
OR (286) 50
NOT (287) 80
LB (288) 6 16 25 26 28 31 32 33 34 87
RB (289) 6 16 25 26 28 31 32 33 34 87
LCB (290) 35
RCB (291) 35
LSB (292)
RSB (293)
VOID (294) 42
FLOAT (295) 44
INT (296) 43
STRING (297) 46
BOOL (298) 45
RETURN (299) 24
TRUE (300) 91
FALSE (301) 92
CPP_COMMENT (302)
C_COMMENT (303)
I_CONST <i_val> (304) 89
F_CONST <f_val> (305) 90
STR_CONST <string> (306) 25 88


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1 2, on right: 0 1
program_body (54)
    on left: 3 4 5, on right: 1
function (55)
    on left: 6, on right: 5
stats (56)
    on left: 7 8, on right: 7 35
stat (57)
    on left: 9 10 11 12 13 14 15, on right: 7
function_call (58)
    on left: 16, on right: 14
argument_list (59)
    on left: 17 18 19, on right: 16 18
expression_statement (60)
    on left: 20 21 22, on right: 13
assign_statement (61)
    on left: 23, on right: 20
return_statement (62)
    on left: 24, on right: 15
printf_statement (63)
    on left: 25 26, on right: 12
variable_declaration (64)
    on left: 27 29 30, on right: 4 11
function_declaration (65)
    on left: 28, on right: 3
while_statement (66)
    on left: 31, on right: 9
if_statement (67)
    on left: 32 33 34, on right: 10 33
block_body (68)
    on left: 35, on right: 6 31 32 33 34
expression (69)
    on left: 36 37, on right: 21 23 24 30 31 32 33 34 87
parameter_list (70)
    on left: 38 39 40, on right: 6 28 39
parameter (71)
    on left: 41, on right: 38 39
type (72)
    on left: 42 43 44 45 46, on right: 6 27 28 29 30 41
assignment_expression (73)
    on left: 47 48, on right: 17 18 27 36 47
logical_or_expression (74)
    on left: 49 50, on right: 48 50
logical_and_expression (75)
    on left: 51 52, on right: 49 50 52
relational_expression (76)
    on left: 53 54, on right: 51 52 54
additive_expression (77)
    on left: 55 56 57, on right: 53 54 56 57
multiplicative_expression (78)
    on left: 58 59 60 61, on right: 55 56 57 59 60 61
relational_operator (79)
    on left: 62 63 64 65 66 67, on right: 54
assignment_operator (80)
    on left: 68 69 70 71 72 73, on right: 23 47
unary_expression (81)
    on left: 74 75 76 77, on right: 47 58 59 60 61 75 76 77
unary_operator (82)
    on left: 78 79 80, on right: 77
postfix_expression (83)
    on left: 81 82 83, on right: 74 82 83
primary_expression (84)
    on left: 84 85 86 87, on right: 81
string (85)
    on left: 88, on right: 86
constant (86)
    on left: 89 90 91 92, on right: 85


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    1 program: program . program_body

    $end    shift, and go to state 2
    VOID    shift, and go to state 3
    FLOAT   shift, and go to state 4
    INT     shift, and go to state 5
    STRING  shift, and go to state 6
    BOOL    shift, and go to state 7

    program_body          go to state 8
    function              go to state 9
    variable_declaration  go to state 10
    function_declaration  go to state 11
    type                  go to state 12


State 2

    0 $accept: program $end .

    $default  accept


State 3

   42 type: VOID .

    $default  reduce using rule 42 (type)


State 4

   44 type: FLOAT .

    $default  reduce using rule 44 (type)


State 5

   43 type: INT .

    $default  reduce using rule 43 (type)


State 6

   46 type: STRING .

    $default  reduce using rule 46 (type)


State 7

   45 type: BOOL .

    $default  reduce using rule 45 (type)


State 8

    1 program: program program_body .

    $default  reduce using rule 1 (program)


State 9

    5 program_body: function .

    $default  reduce using rule 5 (program_body)


State 10

    4 program_body: variable_declaration .

    $default  reduce using rule 4 (program_body)


State 11

    3 program_body: function_declaration .

    $default  reduce using rule 3 (program_body)


State 12

    6 function: type . ID LB parameter_list RB block_body
   27 variable_declaration: type . ID ASGN assignment_expression SEMICOLON
   28 function_declaration: type . ID LB parameter_list RB SEMICOLON
   29 variable_declaration: type . ID SEMICOLON
   30                     | type . ID ASGN expression SEMICOLON

    ID  shift, and go to state 13


State 13

    6 function: type ID . LB parameter_list RB block_body
   27 variable_declaration: type ID . ASGN assignment_expression SEMICOLON
   28 function_declaration: type ID . LB parameter_list RB SEMICOLON
   29 variable_declaration: type ID . SEMICOLON
   30                     | type ID . ASGN expression SEMICOLON

    SEMICOLON  shift, and go to state 14
    ASGN       shift, and go to state 15
    LB         shift, and go to state 16


State 14

   29 variable_declaration: type ID SEMICOLON .

    $default  reduce using rule 29 (variable_declaration)


State 15

   27 variable_declaration: type ID ASGN . assignment_expression SEMICOLON
   30                     | type ID ASGN . expression SEMICOLON

    ID       shift, and go to state 17
    QUOTA    shift, and go to state 18
    ADD      shift, and go to state 19
    SUB      shift, and go to state 20
    INC      shift, and go to state 21
    DEC      shift, and go to state 22
    NOT      shift, and go to state 23
    LB       shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28

    $default  reduce using rule 37 (expression)

    expression                 go to state 29
    assignment_expression      go to state 30
    logical_or_expression      go to state 31
    logical_and_expression     go to state 32
    relational_expression      go to state 33
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    unary_expression           go to state 36
    unary_operator             go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39
    string                     go to state 40
    constant                   go to state 41


State 16

    6 function: type ID LB . parameter_list RB block_body
   28 function_declaration: type ID LB . parameter_list RB SEMICOLON

    VOID    shift, and go to state 3
    FLOAT   shift, and go to state 4
    INT     shift, and go to state 5
    STRING  shift, and go to state 6
    BOOL    shift, and go to state 7

    $default  reduce using rule 40 (parameter_list)

    parameter_list  go to state 42
    parameter       go to state 43
    type            go to state 44


State 17

   84 primary_expression: ID .

    $default  reduce using rule 84 (primary_expression)


State 18

   88 string: QUOTA . STR_CONST QUOTA

    STR_CONST  shift, and go to state 45


State 19

   79 unary_operator: ADD .

    $default  reduce using rule 79 (unary_operator)


State 20

   78 unary_operator: SUB .

    $default  reduce using rule 78 (unary_operator)


State 21

   75 unary_expression: INC . unary_expression

    ID       shift, and go to state 17
    QUOTA    shift, and go to state 18
    ADD      shift, and go to state 19
    SUB      shift, and go to state 20
    INC      shift, and go to state 21
    DEC      shift, and go to state 22
    NOT      shift, and go to state 23
    LB       shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28

    unary_expression    go to state 46
    unary_operator      go to state 37
    postfix_expression  go to state 38
    primary_expression  go to state 39
    string              go to state 40
    constant            go to state 41


State 22

   76 unary_expression: DEC . unary_expression

    ID       shift, and go to state 17
    QUOTA    shift, and go to state 18
    ADD      shift, and go to state 19
    SUB      shift, and go to state 20
    INC      shift, and go to state 21
    DEC      shift, and go to state 22
    NOT      shift, and go to state 23
    LB       shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28

    unary_expression    go to state 47
    unary_operator      go to state 37
    postfix_expression  go to state 38
    primary_expression  go to state 39
    string              go to state 40
    constant            go to state 41


State 23

   80 unary_operator: NOT .

    $default  reduce using rule 80 (unary_operator)


State 24

   87 primary_expression: LB . expression RB

    ID       shift, and go to state 17
    QUOTA    shift, and go to state 18
    ADD      shift, and go to state 19
    SUB      shift, and go to state 20
    INC      shift, and go to state 21
    DEC      shift, and go to state 22
    NOT      shift, and go to state 23
    LB       shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28

    $default  reduce using rule 37 (expression)

    expression                 go to state 48
    assignment_expression      go to state 49
    logical_or_expression      go to state 31
    logical_and_expression     go to state 32
    relational_expression      go to state 33
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    unary_expression           go to state 36
    unary_operator             go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39
    string                     go to state 40
    constant                   go to state 41


State 25

   91 constant: TRUE .

    $default  reduce using rule 91 (constant)


State 26

   92 constant: FALSE .

    $default  reduce using rule 92 (constant)


State 27

   89 constant: I_CONST .

    $default  reduce using rule 89 (constant)


State 28

   90 constant: F_CONST .

    $default  reduce using rule 90 (constant)


State 29

   30 variable_declaration: type ID ASGN expression . SEMICOLON

    SEMICOLON  shift, and go to state 50


State 30

   27 variable_declaration: type ID ASGN assignment_expression . SEMICOLON
   36 expression: assignment_expression .

    SEMICOLON  shift, and go to state 51

    SEMICOLON  [reduce using rule 36 (expression)]


State 31

   48 assignment_expression: logical_or_expression .
   50 logical_or_expression: logical_or_expression . OR logical_and_expression

    OR  shift, and go to state 52

    $default  reduce using rule 48 (assignment_expression)


State 32

   49 logical_or_expression: logical_and_expression .
   52 logical_and_expression: logical_and_expression . AND relational_expression

    AND  shift, and go to state 53

    $default  reduce using rule 49 (logical_or_expression)


State 33

   51 logical_and_expression: relational_expression .
   54 relational_expression: relational_expression . relational_operator additive_expression

    MT   shift, and go to state 54
    LT   shift, and go to state 55
    MTE  shift, and go to state 56
    LTE  shift, and go to state 57
    EQ   shift, and go to state 58
    NE   shift, and go to state 59

    $default  reduce using rule 51 (logical_and_expression)

    relational_operator  go to state 60


State 34

   53 relational_expression: additive_expression .
   56 additive_expression: additive_expression . ADD multiplicative_expression
   57                    | additive_expression . SUB multiplicative_expression

    ADD  shift, and go to state 61
    SUB  shift, and go to state 62

    $default  reduce using rule 53 (relational_expression)


State 35

   55 additive_expression: multiplicative_expression .
   59 multiplicative_expression: multiplicative_expression . MUL unary_expression
   60                          | multiplicative_expression . DIV unary_expression
   61                          | multiplicative_expression . MOD unary_expression

    MUL  shift, and go to state 63
    DIV  shift, and go to state 64
    MOD  shift, and go to state 65

    $default  reduce using rule 55 (additive_expression)


State 36

   47 assignment_expression: unary_expression . assignment_operator assignment_expression
   58 multiplicative_expression: unary_expression .

    ASGN     shift, and go to state 66
    ADDASGN  shift, and go to state 67
    SUBASGN  shift, and go to state 68
    MULASGN  shift, and go to state 69
    DIVASGN  shift, and go to state 70
    MODASGN  shift, and go to state 71

    $default  reduce using rule 58 (multiplicative_expression)

    assignment_operator  go to state 72


State 37

   77 unary_expression: unary_operator . unary_expression

    ID       shift, and go to state 17
    QUOTA    shift, and go to state 18
    ADD      shift, and go to state 19
    SUB      shift, and go to state 20
    INC      shift, and go to state 21
    DEC      shift, and go to state 22
    NOT      shift, and go to state 23
    LB       shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28

    unary_expression    go to state 73
    unary_operator      go to state 37
    postfix_expression  go to state 38
    primary_expression  go to state 39
    string              go to state 40
    constant            go to state 41


State 38

   74 unary_expression: postfix_expression .
   82 postfix_expression: postfix_expression . INC
   83                   | postfix_expression . DEC

    INC  shift, and go to state 74
    DEC  shift, and go to state 75

    $default  reduce using rule 74 (unary_expression)


State 39

   81 postfix_expression: primary_expression .

    $default  reduce using rule 81 (postfix_expression)


State 40

   86 primary_expression: string .

    $default  reduce using rule 86 (primary_expression)


State 41

   85 primary_expression: constant .

    $default  reduce using rule 85 (primary_expression)


State 42

    6 function: type ID LB parameter_list . RB block_body
   28 function_declaration: type ID LB parameter_list . RB SEMICOLON
   39 parameter_list: parameter_list . COMMA parameter

    COMMA  shift, and go to state 76
    RB     shift, and go to state 77


State 43

   38 parameter_list: parameter .

    $default  reduce using rule 38 (parameter_list)


State 44

   41 parameter: type . ID

    ID  shift, and go to state 78


State 45

   88 string: QUOTA STR_CONST . QUOTA

    QUOTA  shift, and go to state 79


State 46

   75 unary_expression: INC unary_expression .

    $default  reduce using rule 75 (unary_expression)


State 47

   76 unary_expression: DEC unary_expression .

    $default  reduce using rule 76 (unary_expression)


State 48

   87 primary_expression: LB expression . RB

    RB  shift, and go to state 80


State 49

   36 expression: assignment_expression .

    $default  reduce using rule 36 (expression)


State 50

   30 variable_declaration: type ID ASGN expression SEMICOLON .

    $default  reduce using rule 30 (variable_declaration)


State 51

   27 variable_declaration: type ID ASGN assignment_expression SEMICOLON .

    $default  reduce using rule 27 (variable_declaration)


State 52

   50 logical_or_expression: logical_or_expression OR . logical_and_expression

    ID       shift, and go to state 17
    QUOTA    shift, and go to state 18
    ADD      shift, and go to state 19
    SUB      shift, and go to state 20
    INC      shift, and go to state 21
    DEC      shift, and go to state 22
    NOT      shift, and go to state 23
    LB       shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28

    logical_and_expression     go to state 81
    relational_expression      go to state 33
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    unary_expression           go to state 82
    unary_operator             go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39
    string                     go to state 40
    constant                   go to state 41


State 53

   52 logical_and_expression: logical_and_expression AND . relational_expression

    ID       shift, and go to state 17
    QUOTA    shift, and go to state 18
    ADD      shift, and go to state 19
    SUB      shift, and go to state 20
    INC      shift, and go to state 21
    DEC      shift, and go to state 22
    NOT      shift, and go to state 23
    LB       shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28

    relational_expression      go to state 83
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    unary_expression           go to state 82
    unary_operator             go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39
    string                     go to state 40
    constant                   go to state 41


State 54

   62 relational_operator: MT .

    $default  reduce using rule 62 (relational_operator)


State 55

   63 relational_operator: LT .

    $default  reduce using rule 63 (relational_operator)


State 56

   64 relational_operator: MTE .

    $default  reduce using rule 64 (relational_operator)


State 57

   65 relational_operator: LTE .

    $default  reduce using rule 65 (relational_operator)


State 58

   66 relational_operator: EQ .

    $default  reduce using rule 66 (relational_operator)


State 59

   67 relational_operator: NE .

    $default  reduce using rule 67 (relational_operator)


State 60

   54 relational_expression: relational_expression relational_operator . additive_expression

    ID       shift, and go to state 17
    QUOTA    shift, and go to state 18
    ADD      shift, and go to state 19
    SUB      shift, and go to state 20
    INC      shift, and go to state 21
    DEC      shift, and go to state 22
    NOT      shift, and go to state 23
    LB       shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28

    additive_expression        go to state 84
    multiplicative_expression  go to state 35
    unary_expression           go to state 82
    unary_operator             go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39
    string                     go to state 40
    constant                   go to state 41


State 61

   56 additive_expression: additive_expression ADD . multiplicative_expression

    ID       shift, and go to state 17
    QUOTA    shift, and go to state 18
    ADD      shift, and go to state 19
    SUB      shift, and go to state 20
    INC      shift, and go to state 21
    DEC      shift, and go to state 22
    NOT      shift, and go to state 23
    LB       shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28

    multiplicative_expression  go to state 85
    unary_expression           go to state 82
    unary_operator             go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39
    string                     go to state 40
    constant                   go to state 41


State 62

   57 additive_expression: additive_expression SUB . multiplicative_expression

    ID       shift, and go to state 17
    QUOTA    shift, and go to state 18
    ADD      shift, and go to state 19
    SUB      shift, and go to state 20
    INC      shift, and go to state 21
    DEC      shift, and go to state 22
    NOT      shift, and go to state 23
    LB       shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28

    multiplicative_expression  go to state 86
    unary_expression           go to state 82
    unary_operator             go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39
    string                     go to state 40
    constant                   go to state 41


State 63

   59 multiplicative_expression: multiplicative_expression MUL . unary_expression

    ID       shift, and go to state 17
    QUOTA    shift, and go to state 18
    ADD      shift, and go to state 19
    SUB      shift, and go to state 20
    INC      shift, and go to state 21
    DEC      shift, and go to state 22
    NOT      shift, and go to state 23
    LB       shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28
